@@ -5,7 +5,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: loading.test,v 1.2 2002/07/22 09:27:20 mdejong Exp $
+# RCS: @(#) $Id: loading.test,v 1.3 2002/07/22 10:00:47 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -363,6 +363,24 @@ exit 0
     exec $env(JAVA) -classpath $env(CLASSPATH) tests.JavaEval $script
 } {hello}
 
+test loading-7.1 {JDK 1.2 and newer support tclblend_init for JVM options} {
+     set f [makeFile {
+set tclblend_init {-Dmyprop1=555 -Dmyprop2=222}
+package require java
+# Blindly return 0 for JDK 1.1 systems so the test passes
+if {[regexp {1.1.*} $tcljava(java.version)]} {exit 0}
+java::try {
+    if {[java::call System getProperty myprop1] == "555" &&
+        [java::call System getProperty myprop2] == "222"} {
+        exit 0
+    }
+} catch {Exception e} {
+    $e printStackTrace
+}
+exit 1
+} loading.tcl]
+    list [catch {exec $tcltest::tcltest $f >@stdout 2>@stderr} err] $err
+} {0 {}}
 
 # cleanup
 if {[info exists env(TCLBLEND_TRACE)]} {
