@@ -1,3 +1,11 @@
+2002-12-24  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/native/javaCmd.c (JavaInitEnv): Treat
+	tclblend_init as a list and pass each element
+	as a JVM option.
+	* tests/tclblend/loading.test: Test passing
+	of multiple JVM options via tclblend_init.
+
 2002-12-23  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* new_features.txt: Add note about new accessible
